Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <img src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen3.gif?raw=true" alt="Create a population"></p>
 
 <p><strong>Robust error handling!</strong>
-<img src="http://i.imgur.com/CUuTaOG.gifv" alt="such error"></p>
+<img src="http://i.imgur.com/CUuTaOG.gif" alt="such error"></p>
         </article>
       </div>
     </div>
