--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<head>
+		<meta charset='utf-8'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="..stylesheets/bootstrap.space.mod.css" title="base">
+		<link rel="stylesheet" href="..stylesheets/site.css" title="base">
+		<link rel="alt stylesheet" href="..stylesheets/219.css" title="219">
+		<link rel="alt stylesheet" href="..stylesheets/219site.css" title="219">
+        <link rel="shortcut icon" href="http://www.iconj.com/icon.php?pid=u8tuc0fwqi" type="image/x-icon" /> 
+		<title>imhall.com</title>
+	</head>
+	<body onload="set_style_from_cookie()">
+	    <div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/">{imhall.com}</a>
+				</div>
+				<div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="http://www.imhall.com/projects.html">projects</a></li>
+                        <li><a href="http://www.imhall.com/photos.html">photos</a></li>
+                    </ul>
+				</div>
+			</div>
+		</div>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+	    <div class="container body-content">
+			<h2>Ian's Conway's Game Of Life</h2>
+            <div class="col-md-12">           
+				What was once a basic program written for CS101 has turned into this console implementation of Conway's Game Of Life. 
+				<a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a> Just look at these awesome features:
+				<br />
+				<h4>Full-featured menus</h4>
+				<img class="img-responsive" width=750 src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen1.png?raw=true" alt="main menu">		
+				<br /><br />
+				<h4>Supports loading of CELLS-style files of populations</h4>
+				<video class="img-responsive" width=750 preload="meta" controls="controls" autoplay="autoplay">
+					<source src="https://i.imgur.com/jXuPl9r.webm" type="video/webm" />
+					<source src="https://i.imgur.com/jXuPl9r.mp4" type="video/mp4" />
+				</video>
+				<br /><br />
+				<h4>Advanced population creation functionality</h4>
+				<video class="img-responsive" width=750 preload="meta" controls="controls">
+					<source src="https://i.imgur.com/utHpCxp.webm" type="video/webm" />
+					<source src="https://i.imgur.com/utHpCxp.mp4" type="video/mp4" />
+				</video>
+				<br /><br />
+				<h4>Robust error handling</h4>
+				<video class="img-responsive" width=750 preload="meta" controls="controls">
+					<source src="https://i.imgur.com/CUuTaOG.webm" type="video/webm" />
+					<source src="https://i.imgur.com/CUuTaOG.mp4" type="video/mp4" />
+				</video>
+				<br /><br />
+				<h4>Now also supports 1D Automata rules</h4>
+				<video class="img-responsive" width=750 preload="meta" controls="controls">
+					<source src="https://i.imgur.com/sWtH7Po.webm" type="video/webm" />
+					<source src="https://i.imgur.com/sWtH7Po.mp4" type="video/mp4" />
+				</video>
+				<br />
+            </div>
+		</div>
 
-  <title>Conway&#39;s Game Of Life</title>
-  <meta name="description" content="">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Conway&#39;s Game Of Life</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/ian-hall/GHGameOfLife/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/ian-hall/GHGameOfLife/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/ian-hall/GHGameOfLife" class="code">View Conway&#39;s Game Of Life on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="ians-conways-game-of-life" class="anchor" href="#ians-conways-game-of-life" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ian's Conway's Game Of Life.</h3>
-
-<p>Here is a(n over-engineered) console implementation of Conway's Game Of Life using C#. Just look at it.</p>
-
-<h1>
-<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h1>
-
-<p><strong>Fully interactive retro console UI!</strong>
-<img src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen1.png?raw=true" alt="Welcome"></p>
-
-<p><strong>Ability to load your own population file!</strong>
-<img src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen6.gif?raw=true" alt="Loading a population"></p>
-
-<p><strong>Ability to create your own population!</strong>
-<img src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen3.gif?raw=true" alt="Create a population"></p>
-
-<p><strong>Robust error handling!</strong>
-<img src="http://i.imgur.com/CUuTaOG.gif" alt="such error"></p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/ian-hall" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5023838?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ian-hall">ian-hall</a> maintains <a href="https://github.com/ian-hall/GHGameOfLife">Conway&#39;s Game Of Life</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/ian-hall/GHGameOfLife/tarball/master" class="tar">tar</a><a href="https://github.com/ian-hall/GHGameOfLife/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<p class="text-footer">
+						<ul class="list-inline">
+                            <li>&copy; 2016 - <a href="http://www.github.com/ian-hall">Ian Hall<img src="..images/blacktocat.png"></a></li>
+							<li class="btn-group pull-right">
+								<button type="submit" onclick="switch_style('base');return false;" name="theme" value="Light Theme" id="base" class="btn btn-default">Light</button>
+								<button type="submit" onclick="switch_style('219');return false;" name="theme" value="Dark Theme" id="219" class="btn btn-default">Dark</button>
+							</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</footer>
+        <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+		<script src="..scripts/themeswitch.js"></script>
+	</body>
 </html>
