--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset='utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="..stylesheets/bootstrap.space.mod.css" title="base">
-		<link rel="stylesheet" href="..stylesheets/site.css" title="base">
-		<link rel="alt stylesheet" href="..stylesheets/219.css" title="219">
-		<link rel="alt stylesheet" href="..stylesheets/219site.css" title="219">
+		<link rel="stylesheet" href="../stylesheets/bootstrap.space.mod.css" title="base">
+		<link rel="stylesheet" href="../stylesheets/site.css" title="base">
+		<link rel="alt stylesheet" href="../stylesheets/219.css" title="219">
+		<link rel="alt stylesheet" href="../stylesheets/219site.css" title="219">
         <link rel="shortcut icon" href="http://www.iconj.com/icon.php?pid=u8tuc0fwqi" type="image/x-icon" /> 
 		<title>imhall.com</title>
 	</head>
@@ -71,7 +71,7 @@
 				<div class="row">
 					<p class="text-footer">
 						<ul class="list-inline">
-                            <li>&copy; 2016 - <a href="http://www.github.com/ian-hall">Ian Hall<img src="..images/blacktocat.png"></a></li>
+                            <li>&copy; 2016 - <a href="http://www.github.com/ian-hall">Ian Hall<img src="../images/blacktocat.png"></a></li>
 							<li class="btn-group pull-right">
 								<button type="submit" onclick="switch_style('base');return false;" name="theme" value="Light Theme" id="base" class="btn btn-default">Light</button>
 								<button type="submit" onclick="switch_style('219');return false;" name="theme" value="Dark Theme" id="219" class="btn btn-default">Dark</button>
