--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset='utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../stylesheets/bootstrap.space.mod.css" title="base">
-		<link rel="stylesheet" href="../stylesheets/site.css" title="base">
-		<link rel="alt stylesheet" href="../stylesheets/219.css" title="219">
-		<link rel="alt stylesheet" href="../stylesheets/219site.css" title="219">
+		<link rel="stylesheet" href="http://www.imhall.com/stylesheets/bootstrap.space.mod.css" title="base">
+		<link rel="stylesheet" href="http://www.imhall.com/stylesheets/site.css" title="base">
+		<link rel="alt stylesheet" href="http://www.imhall.com/stylesheets/219.css" title="219">
+		<link rel="alt stylesheet" href="http://www.imhall.com/stylesheets/219site.css" title="219">
         <link rel="shortcut icon" href="http://www.iconj.com/icon.php?pid=u8tuc0fwqi" type="image/x-icon" /> 
 		<title>imhall.com</title>
 	</head>
@@ -40,26 +40,22 @@
 				<img class="img-responsive" width=750 src="https://github.com/ian-hall/GHGameOfLife/blob/master/Screenshots/screen1.png?raw=true" alt="main menu">		
 				<br /><br />
 				<h4>Supports loading of CELLS-style files of populations</h4>
-				<video class="img-responsive" width=750 preload="meta" controls="controls" autoplay="autoplay">
-					<source src="https://i.imgur.com/jXuPl9r.webm" type="video/webm" />
+				<video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop">
 					<source src="https://i.imgur.com/jXuPl9r.mp4" type="video/mp4" />
 				</video>
 				<br /><br />
 				<h4>Advanced population creation functionality</h4>
-				<video class="img-responsive" width=750 preload="meta" controls="controls">
-					<source src="https://i.imgur.com/utHpCxp.webm" type="video/webm" />
+				<video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop">
 					<source src="https://i.imgur.com/utHpCxp.mp4" type="video/mp4" />
 				</video>
 				<br /><br />
 				<h4>Robust error handling</h4>
-				<video class="img-responsive" width=750 preload="meta" controls="controls">
-					<source src="https://i.imgur.com/CUuTaOG.webm" type="video/webm" />
+				<video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop">
 					<source src="https://i.imgur.com/CUuTaOG.mp4" type="video/mp4" />
 				</video>
 				<br /><br />
 				<h4>Now also supports 1D Automata rules</h4>
-				<video class="img-responsive" width=750 preload="meta" controls="controls">
-					<source src="https://i.imgur.com/sWtH7Po.webm" type="video/webm" />
+				<video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop">
 					<source src="https://i.imgur.com/sWtH7Po.mp4" type="video/mp4" />
 				</video>
 				<br />
@@ -71,7 +67,7 @@
 				<div class="row">
 					<p class="text-footer">
 						<ul class="list-inline">
-                            <li>&copy; 2016 - <a href="http://www.github.com/ian-hall">Ian Hall<img src="../images/blacktocat.png"></a></li>
+                            <li>&copy; 2016 - <a href="http://www.github.com/ian-hall">Ian Hall<img src="http://www.imhall.com/images/blacktocat.png"></a></li>
 							<li class="btn-group pull-right">
 								<button type="submit" onclick="switch_style('base');return false;" name="theme" value="Light Theme" id="base" class="btn btn-default">Light</button>
 								<button type="submit" onclick="switch_style('219');return false;" name="theme" value="Dark Theme" id="219" class="btn btn-default">Dark</button>
@@ -84,6 +80,6 @@
         <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-		<script src="../scripts/themeswitch.js"></script>
+		<script src="http://www.imhall.com/scripts/themeswitch.js"></script>
 	</body>
 </html>
