--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             What was once a basic program written for CS101 has turned into this console implementation of Conway's Game Of Life.
                             Written in C#, I have harnessed the power of the console to bring a robust, full-featured, retro-styled, buzzword described
                             implementation of Conway's Game Of Life. I am currently working to add more support for 1D automata, as well as different
-                            rule sets for both 1D automata and 2D automata, such as Conway's.
+                            rule sets for both 1D automata and 2D automata.
                             <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a>
                             <br /><br />
                             Just look at these awesome features:
@@ -51,23 +51,28 @@
                 <img class="img-responsive" width=750 src="https://i.imgur.com/hpqe2Tx.png" alt="main menu">
                 <br /><br />
                 <h4>Supports loading of CELLS-style files of populations</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="https://i.imgur.com/hpqe2Tx.png">
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/0uSQUHc.png">
                     <source src="https://i.imgur.com/jXuPl9r.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Advanced population creation functionality</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="https://i.imgur.com/hpqe2Tx.png">
-                    <source src="https://i.imgur.com/utHpCxp.mp4" type="video/mp4" />
-                </video>
-                <br /><br />
                 <h4>Robust error handling</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="https://i.imgur.com/hpqe2Tx.png">
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/BSjmOaR.png">
                     <source src="https://i.imgur.com/CUuTaOG.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Now also supports 1D automata rules</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="https://i.imgur.com/hpqe2Tx.png">
-                    <source src="https://i.imgur.com/sWtH7Po.mp4" type="video/mp4" />
+                <h4>Choose from a wide selection of premade populations</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/PhpbGtx.png">
+                    <source src="http://i.imgur.com/hytBiHl.mp4" type="video/mp4" />
+                </video>
+                <br /><br />
+                <h4>Advanced population creation functionality</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/nVzGG96.png">
+                    <source src="http://i.imgur.com/Z1mXPAG.mp4" type="video/mp4" />
+                </video>
+                <br /><br />
+                <h4>Basic support for 1D automata rules</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/IWDeRhC.png">
+                    <source src="http://i.imgur.com/guSiY83.mp4" type="video/mp4" />
                 </video>
                 <br />
             </div>
