updated index to have more current info

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 		</div>
 
         <div class="container body-content">
-            <h2>Ian's Conway's Game Of Life</h2>
+            <h2>Ian's cellular automata thing</h2>
             <div class="col-md-12">
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <p class="lead">
-                            What was once a basic program written for CS101 has turned into this console implementation of Conway's Game Of Life.
+                            What was once a basic program written for CS101 that went through a few generations of Conway's Game of Life 
+                            has turned into this program for simulating various types of cellular automata.
                             Written in C#, I have harnessed the power of the console to bring a robust, full-featured, retro-styled, buzzword described
-                            implementation of Conway's Game Of Life. I am currently working to add more support for 1D automata, as well as different
-                            rule sets for both 1D automata and 2D automata.
+                            program that lets users choose between types, rule sets, and starting populations.
                             <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a>
                             <br /><br />
                             Just look at these awesome features:
@@ -70,7 +70,7 @@
                     <source src="http://i.imgur.com/Z1mXPAG.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Basic support for 1D automata rules</h4>
+                <h4>Also supports 1D automata</h4>
                 <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/IWDeRhC.png">
                     <source src="http://i.imgur.com/guSiY83.mp4" type="video/mp4" />
                 </video>
