update project description

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <p class="lead">
-                            What was once a basic program written for CS101 that went through a few generations of Conway's Game of Life 
-                            has turned into this program for simulating various types of cellular automata.
+                            What was once a basic program that went through a few generations of Conway's Game of Life 
+                            has turned into this not quite as basic program for simulating various types of cellular automata.
                             Written in C#, I have harnessed the power of the console to bring a robust, full-featured, retro-styled, buzzword described
                             program that lets users choose between types, rule sets, and starting populations.
                             <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a>
