updated gh-pages page
now with more buzzwords and up-to-date gifs of the interface

--- a/index.html
+++ b/index.html
@@ -38,43 +38,46 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <p class="lead">
-                            What was once a basic program that went through a few generations of Conway's Game of Life 
-                            has turned into this not quite as basic program for simulating various types of cellular automata.
-                            Written in C#, I have harnessed the power of the console to bring a robust, full-featured, retro-styled, buzzword described
-                            program that lets users choose between types, rule sets, and starting populations.
-                            <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a>
+                            I have harnessed the power of the console to bring a robust, full-featured, retro-styled, buzzword described
+                            program that lets users choose between types, rule sets, and starting populations. Users are able to utilize
+                            the advanced population creation feature to watch a custom 2D population grow or put in a custom hex string
+                            as a 1D rule.
+                            <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a> 
+                            You can even download a (maybe) working executable now.
                             <br /><br />
                             Just look at these awesome features:
                         </p>
                     </div>
                 </div>
                 <br />
-                <h4>Full-featured menus</h4>
-                <img class="img-responsive" width=750 src="https://i.imgur.com/hpqe2Tx.png" alt="main menu">
-                <br /><br />
-                <h4>Supports loading of CELLS-style files of populations</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/0uSQUHc.png">
-                    <source src="https://i.imgur.com/jXuPl9r.mp4" type="video/mp4" />
+                <h4>Advanced run controls</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/KneOJPL.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Robust error handling</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/BSjmOaR.png">
-                    <source src="https://i.imgur.com/CUuTaOG.mp4" type="video/mp4" />
+                <h4>Support for CELLS files</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/3cGs8K7.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Choose from a wide selection of premade populations</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/PhpbGtx.png">
-                    <source src="http://i.imgur.com/hytBiHl.mp4" type="video/mp4" />
+                <h4>"Robust" error handling</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/Nd9r1UO.mp4" type="video/mp4" />
+                </video>
+                <br /><br />
+                <h4>Many preset populations</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/UI0zj0W.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
                 <h4>Advanced population creation functionality</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/nVzGG96.png">
-                    <source src="http://i.imgur.com/Z1mXPAG.mp4" type="video/mp4" />
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/R0h2o2D.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
-                <h4>Also supports 1D automata</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/IWDeRhC.png">
-                    <source src="http://i.imgur.com/guSiY83.mp4" type="video/mp4" />
+                <h4>Psychedelic 1D rules</h4>
+                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <source src="http://i.imgur.com/WskHUaT.mp4" type="video/mp4" />
                 </video>
                 <br />
             </div>
