moved theme switch button off the navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="http://www.imhall.com">{imhall.com}</a>
-					<button type="button" onclick="switch_style(this.value)" name="theme" value="light" id="themeSwitcher" class="btn btn-sm btn-default navbar-btn"></button>
 				</div>
 				<div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -33,6 +32,7 @@
 		</div>
 
         <div class="container body-content">
+		<button type="button" onclick="switch_style(this.value)" name="theme" value="light" id="themeSwitcher" class="btn btn-sm btn-default navbar-btn" style="position:fixed; top:50px; right:15px; z-index:9001;"></button>
             <h2>Ian's cellular automata thing</h2>
             <div class="col-md-12">
                 <div class="panel panel-primary">
