updated the webpage

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                             program that lets users choose between types, rule sets, and starting populations. Users are able to utilize
                             the advanced population creation feature to watch a custom 2D population grow or put in a custom hex string
                             as a 1D rule.
-                            <a href="https://github.com/ian-hall/GHGameOfLife">You can find it here on GitHub.</a> 
-                            You can even download a (maybe) working executable now.
+                            The source code can be found on <a href="https://github.com/ian-hall/GHGameOfLife">GitHub</a>. 
+                            You can download the latest release <a href="https://github.com/ian-hall/GHGameOfLife/releases">here</a>.
                             <br /><br />
                             Just look at these awesome features:
                         </p>
@@ -52,16 +52,6 @@
                 <h4>Advanced run controls</h4>
                 <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
                     <source src="http://i.imgur.com/KneOJPL.mp4" type="video/mp4" />
-                </video>
-                <br /><br />
-                <h4>Support for CELLS files</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
-                    <source src="http://i.imgur.com/3cGs8K7.mp4" type="video/mp4" />
-                </video>
-                <br /><br />
-                <h4>"Robust" error handling</h4>
-                <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
-                    <source src="http://i.imgur.com/Nd9r1UO.mp4" type="video/mp4" />
                 </video>
                 <br /><br />
                 <h4>Many preset populations</h4>
