--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                     </div>
                     <br />
                     <h4>Advanced run controls</h4>
-                    <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <video class="img-fluid" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
                         <source src="http://i.imgur.com/KneOJPL.mp4" type="video/mp4" />
                     </video>
                     <br /><br />
                     <h4>Many preset populations</h4>
-                    <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <video class="img-fluid" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
                         <source src="http://i.imgur.com/UI0zj0W.mp4" type="video/mp4" />
                     </video>
                     <br /><br />
                     <h4>Advanced population creation functionality</h4>
-                    <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <video class="img-fluid" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
                         <source src="http://i.imgur.com/R0h2o2D.mp4" type="video/mp4" />
                     </video>
                     <br /><br />
                     <h4>Psychedelic 1D rules</h4>
-                    <video class="img-responsive" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
+                    <video class="img-fluid" width=750 preload="metadata" controls="controls" loop="loop" poster="http://i.imgur.com/v2JztGZ.jpg">
                         <source src="http://i.imgur.com/WskHUaT.mp4" type="video/mp4" />
                     </video>
                     <br />
